refactor: MVC 정비, WebSocket 제거, DTO/Service 추가